--- a/saitae-web/src/main/webapp/pages/aula.xhtml
+++ b/saitae-web/src/main/webapp/pages/aula.xhtml
@@ -1,64 +1,65 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>Administración de Aulas</title>
-        <h:outputStylesheet library="css" name="tpp.css"/>
-    </h:head>
-    <h:body>
-        <h:form id="form" styleClass="centred-form">
-            <p:growl id="msgs" showDetail="true"/>
-            <h3>Aulas</h3>
-            <p:dataTable id="aula" var="a" value="#{aulaController.aulas}" editable="true" 
-                         widgetVar="aula" >
-                <f:facet name="header">
-                    Administración de Aulas
-                </f:facet>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-                <p:ajax event="rowEdit" listener="#{aulaController.onRowEdit}" update=":form:msgs" />
-                <p:ajax event="rowEditCancel" listener="#{aulaController.onRowCancel}" update=":form:msgs" />
-                <p:ajax event="cellEdit" listener="#{aulaController.onCellEdit}" update=":form:msgs" />
+    <body>
+        <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
+            <ui:define name="content">
+                <h:form id="form" styleClass="centred-form">
+                    <p:growl id="msgs" showDetail="true"/>
+                    <h3>Aulas</h3>
+                    <p:dataTable id="aula" var="a" value="#{aulaController.aulas}" editable="true" 
+                                 widgetVar="aula" >
+                        <f:facet name="header">
+                            Administración de Aulas
+                        </f:facet>
 
-                <p:column headerText="Id">
-                    <h:outputText value="#{a.idaula}" />
-                </p:column>
+                        <p:ajax event="rowEdit" listener="#{aulaController.onRowEdit}" update=":form:msgs" />
+                        <p:ajax event="rowEditCancel" listener="#{aulaController.onRowCancel}" update=":form:msgs" />
+                        <p:ajax event="cellEdit" listener="#{aulaController.onCellEdit}" update=":form:msgs" />
 
-                <p:column headerText="Zona">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{a.zonaAula.idzona}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{a.zonaAula.idzona}" 
-                                                           style="width:100%" label="Zona"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
+                        <p:column headerText="Id">
+                            <h:outputText value="#{a.idaula}" />
+                        </p:column>
 
-                <p:column headerText="Comentario">
-                    <p:cellEditor>
-                        <f:facet name="output"><h:outputText value="#{a.aulaComentario}" /></f:facet>
-                        <f:facet name="input"><p:inputText value="#{a.aulaComentario}" 
-                                                           style="width:100%" label="Comentario"/></f:facet>
-                    </p:cellEditor>
-                </p:column>
-                <p:column style="width:35px">
-                    <p:rowEditor />
-                </p:column>
-            </p:dataTable>
-            <div class="ui-g">
-                <div class="ui-g-12">
-                    <p:commandButton value="Agregar Nuevo" styleClass="ui-priority-primary" 
-                                     process="@this" update=":form:msgs"
-                                     action="#{aulaController.onAddNew()}" 
-                                     oncomplete="PF('aula').addRow();"/>
-                </div>
-            </div>
-            <p:contextMenu for="aula" widgetVar="cMenu">   
-                <p:menuitem value="Editar" icon="pi pi-search" onclick="PF('aula').showCellEditor();return false;"/>  
-                <p:menuitem value="Hide Menu" icon="pi pi-times" onclick="PF('cMenu').hide()"/>  
-            </p:contextMenu>
-        </h:form>
-    </h:body>
+                        <p:column headerText="Zona">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{a.zonaAula.idzona}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{a.zonaAula.idzona}" 
+                                                                   style="width:100%" label="Zona"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
+                        <p:column headerText="Comentario">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{a.aulaComentario}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{a.aulaComentario}" 
+                                                                   style="width:100%" label="Comentario"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+                        <p:column style="width:35px">
+                            <p:rowEditor />
+                        </p:column>
+                    </p:dataTable>
+                    <div class="ui-g">
+                        <div class="ui-g-12">
+                            <p:commandButton value="Agregar Nuevo" styleClass="ui-priority-primary" 
+                                             process="@this" update=":form:msgs"
+                                             action="#{aulaController.onAddNew()}" 
+                                             oncomplete="PF('aula').addRow();"/>
+                        </div>
+                    </div>
+                    <p:contextMenu for="aula" widgetVar="cMenu">   
+                        <p:menuitem value="Editar" icon="pi pi-search" onclick="PF('aula').showCellEditor();return false;"/>  
+                        <p:menuitem value="Hide Menu" icon="pi pi-times" onclick="PF('cMenu').hide()"/>  
+                    </p:contextMenu>
+                </h:form>
+            </ui:define>
+        </ui:composition>
+    </body>
 </html>
-
 
