--- a/saitae-web/src/main/webapp/pages/aula.xhtml
+++ b/saitae-web/src/main/webapp/pages/aula.xhtml
@@ -29,8 +29,11 @@
                         <p:column headerText="Zona">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{a.zonaAula.idzona}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{a.zonaAula.idzona}" 
-                                                                   style="width:100%" label="Zona"/></f:facet>
+                                <f:facet name="input"><p:selectOneMenu id="console" value="#{a.zonaAula.idzona}" 
+                                     style="width:125px" title="Seleccione una zona ">
+                                        <f:selectItems value="#{aulaController.listaZonas}"/>
+                        <f:ajax render="console1" execute="SeleccionAula"/>
+                                    </p:selectOneMenu></f:facet>
                             </p:cellEditor>
                         </p:column>
 
