--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -64,7 +64,7 @@
                                         navigator="true" pattern="yyyy-mm-dd" />
                         </h:panelGrid>
                     </p:panel>
-                    <p:commandButton id="summit" value="Solicitar"/>
+                    <p:commandButton id="summit" value="Solicitar" actionListener="#{permisoEstudianteController.guardar()}"/>
                 </h:form>
             </ui:define>
 
