--- a/saitae-web/src/main/webapp/pages/aulas.xhtml
+++ b/saitae-web/src/main/webapp/pages/aulas.xhtml
@@ -3,37 +3,36 @@
 <!DOCTYPE html>
 <html 
     xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-  <body>
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    <body>
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
             <ui:define name="content">
                 <h:form id="form" styleClass="centred-form">
-                    <p:growl id="msgs" showDetail="true"/>
                     <h3>Aulas</h3>
-                    <p:dataTable id="aula" var="a" value="#{aulaController.aulas}" editable="true" 
+                    <p:dataTable id="aula" var="a" value="#{tipoController.aulas}" editable="true" 
                                  widgetVar="aula" >
                         <f:facet name="header">
                             Administración de Aulas
                         </f:facet>
 
-                        <p:ajax event="rowEdit" listener="#{aulaController.onRowEdit}" update=":form:msgs" />
-                        <p:ajax event="rowEditCancel" listener="#{aulaController.onRowCancel}" update=":form:msgs" />
-                     
+                        <p:ajax event="rowEdit" listener="#{tipoController.onRowEdit}" update=":form0:msgs" />
+                        <p:ajax event="rowEditCancel" listener="#{tipocontroller.onRowCancel}" update=":form0:msgs" />
+
 
                         <p:column headerText="Id">
                             <h:outputText value="#{a.idaula}" />
                         </p:column>
-                        
+
                         <p:column headerText="Zona Aula">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{a.zonaAula.zonaNombre}" /></f:facet>
                                 <f:facet name="input"><p:selectOneMenu id="console" value="#{a.zonaAula.idzona}" 
-                                     style="width:125px" title="Seleccione un tipo ">
-                                        <f:selectItems value="#{aulaController.listaZonas}"/>
-                        <f:ajax render="console1" execute="SeleccionMateria"/>
+                                                                       style="width:125px" title="Seleccione un tipo ">
+                                        <f:selectItems value="#{tipoController.listaZonas}"/>
+                                        <f:ajax render="console1" execute="SeleccionMateria"/>
                                     </p:selectOneMenu></f:facet>
                             </p:cellEditor>
                         </p:column>
@@ -52,15 +51,11 @@
                     <div class="ui-g">
                         <div class="ui-g-12">
                             <p:commandButton value="Agregar Nuevo" styleClass="ui-priority-primary" 
-                                             process="@this" update=":form:msgs"
-                                             action="#{aulaController.onAddNew()}" 
+                                             process="@this" update=":form0:msgs"
+                                             action="#{tipocontroller.onAddNew('aula')}" 
                                              oncomplete="PF('aula').addRow();"/>
                         </div>
                     </div>
-                    <p:contextMenu for="aula" widgetVar="cMenu">   
-                        <p:menuitem value="Editar" icon="pi pi-search" onclick="PF('aula').showCellEditor();return false;"/>  
-                        <p:menuitem value="Hide Menu" icon="pi pi-times" onclick="PF('cMenu').hide()"/>  
-                    </p:contextMenu>
                 </h:form>
             </ui:define>
         </ui:composition>
